<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.information.PersonalInfoFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_donation_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:hint="@string/donation_id"
				android:inputType="none" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_current_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:hint="@string/current_name"
				android:inputType="none" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_birth_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:hint="@string/birth_name"
				android:inputType="none" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_first_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:hint="@string/first_name"
				android:inputType="none" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_birth_date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:hint="@string/birth_date"
				android:inputType="none" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_birth_place"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:hint="@string/birth_place"
				android:inputType="none" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_home_type"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/home_type"
				android:inputType="textAutoComplete" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/address"
				android:inputType="textAutoComplete" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_building"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/building"
				android:inputType="textAutoComplete" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_place_of"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/place_of"
				android:inputType="textAutoComplete" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_zip_code"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/zip_code"
				android:inputType="number" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_city"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/city"
				android:inputType="textAutoComplete" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_weight"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/weight"
				android:inputType="numberDecimal" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_height"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/height"
				android:inputType="number" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_personal_number"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/personal_number"
				android:inputType="phone" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_mobile_number"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/mobile_number"
				android:inputType="phone" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_professional_number"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/professional_number"
				android:inputType="phone" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing">

			<EditText
				android:id="@+id/input_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/email"
				android:inputType="textEmailAddress" />
		</com.google.android.material.textfield.TextInputLayout>

		<CheckBox
			android:id="@+id/checkbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/personal_information_spacing"
			android:text="@string/checkbox_personal_info" />

		<fr.socket.florian.dondesang.ui.view.ProgressButton
			android:id="@+id/save_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="@string/save" />

	</LinearLayout>

</ScrollView>