<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	tools:context=".ui.activities.LoginActivity">

	<ImageView
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:src="@drawable/ic_droplet"
		android:tint="@android:color/white"
		app:layout_constraintBottom_toTopOf="@id/form_layout"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<RelativeLayout
		android:id="@+id/form_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="40dp"
		app:layout_constraintBottom_toBottomOf="parent">

		<RelativeLayout
			android:id="@+id/firstRow"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_marginStart="20dp"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="20dp"
			android:background="@drawable/edit_text_border">

			<ImageView
				android:id="@+id/userIcon"
				android:layout_width="25dp"
				android:layout_height="25dp"
				android:layout_centerVertical="true"
				android:layout_marginStart="15dp"
				android:contentDescription="@string/username_icon"
				android:src="@drawable/ic_user"
				android:tint="@color/whiteGrey" />

			<EditText
				android:id="@+id/editUsername"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_centerVertical="true"
				android:layout_marginStart="15dp"
				android:layout_toEndOf="@+id/userIcon"
				android:background="@android:color/transparent"
				android:hint="@string/username"
				android:inputType="text"
				android:singleLine="true"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
				android:textColor="@android:color/primary_text_dark"
				android:textColorHint="@android:color/tertiary_text_dark" />

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/secondRow"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_below="@id/firstRow"
			android:layout_marginStart="20dp"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="20dp"
			android:background="@drawable/edit_text_border">

			<ImageView
				android:id="@+id/passwordIcon"
				android:layout_width="25dp"
				android:layout_height="25dp"
				android:layout_centerVertical="true"
				android:layout_marginStart="15dp"
				android:contentDescription="@string/lock_icon"
				android:src="@drawable/ic_locked"
				android:tint="@color/whiteGrey" />

			<EditText
				android:id="@+id/editPassword"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_centerVertical="true"
				android:layout_marginStart="15dp"
				android:layout_toEndOf="@+id/passwordIcon"
				android:background="@android:color/transparent"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:singleLine="true"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
				android:textColor="@android:color/primary_text_dark"
				android:textColorHint="@android:color/tertiary_text_dark" />

		</RelativeLayout>

		<fr.socket.florian.dondesang.ui.view.ProgressButton
			android:id="@+id/progressButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/secondRow"
			android:layout_marginTop="10dp"
			android:text="@string/sign_in" />

	</RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>